Fixed contrast issue for text

--- a/_assets/stylesheets/light.scss
+++ b/_assets/stylesheets/light.scss
@@ -11,6 +11,7 @@ $black: #000;
 $gray-darkest: #121111;
 $gray-darker: lighten($gray-darkest, 15);
 $gray-dark: lighten($gray-darkest, 30);
+$gray-less-dark: lighten($gray-darkest, 40);
 $gray: lighten($gray-darkest, 45);
 $gray-light: lighten($gray-darkest, 60);
 $gray-lighter: lighten($gray-darkest, 75);
@@ -36,7 +37,7 @@ $header-link-color-hover: $gray-darkest;
 $article-header-title-color: $gray-darkest;
 $article-header-description-color: $gray-dark;
 $article-post-titles-color: $gray-darkest;
-$article-footer-color: $gray-light;
+$article-footer-color: $gray-less-dark;
 $article-footer-link-color: $gray-dark;
 $article-footer-link-color-hover: $gray-darkest;
 $article-paginator-color-hover: $gray-darkest;
